@@ -24,11 +24,9 @@
  *
  */
 
-#include "cssc.h"
 #include "delta.h"
 #include "cleanup.h"
 #include "my-getopt.h"
-#include "fileiter.h"
 #include "pfile.h"
 #include "sccsfile.h"
 #include "sf-chkmr.h"
@@ -36,6 +34,14 @@
 #include "except.h"
 #include "ioerr.h"
 #include "file.h"
+
+// If we include fileiter.h before config.h, then 
+// we get regression test failures.  These appear to
+// be caused by the fact that <config.h> was not
+// included.
+#include "cssc.h"
+#include "fileiter.h"
+
 
 
 
